# liten

./: '  .gitignore  :w  Cargo.toml  Justfile  Makefile  README.md  bacon.toml  default.nix  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
book/: book.toml
book/src/: SUMMARY.md  blocking.md  getting-started.md  introduction.md  runtime.md  sync.md  tasks.md  time.md
docs/: runtime_api.md
docs/decisions/: 001-async-io-tcpstream.md  002-using-loom-in-testing.md
examples/: ffi_read_write.c
examples/clean/: Cargo.toml
examples/clean/src/: main.rs
examples/coro/: Cargo.toml
examples/coro/src/: main.rs
examples/io-uring-testing/: Cargo.toml  build.rs
examples/io-uring-testing/src/: main.rs
examples/runtime_modes/: Cargo.toml
examples/runtime_modes/src/: main.rs
examples/testing/: Cargo.toml
examples/testing-tokio/: Cargo.toml
examples/testing-tokio/src/: main.rs
examples/testing/src/: main.rs
examples/tokio-test/: Cargo.toml
examples/tokio-test/src/: main.rs
lblock/: Cargo.toml
lio/: Cargo.toml  HOW_ADD_OP.md  README.md  build.rs  cbindgen.toml
lio-net/: Cargo.toml
lio-net/src/: lib.rs
lio/examples/: nice.rs
lio/src/: backends.rs  driver.rs  ffi.rs  lib.rs  loom.rs  macros.rs  mod.rs  op.rs  op_progress.rs  op_registration.rs
lio/src/backends/: io_uring.rs  polling.rs
lio/src/op/: accept.rs  bind.rs  close.rs  connect.rs  fsync.rs  linkat.rs  listen.rs  net_utils.rs  nop.rs  openat.rs  read.rs  recv.rs  send.rs  shutdown.rs  socket.rs  symlink.rs  tee.rs  timeout.rs  truncate.rs  write.rs
lio/src/shuttle/: mod.rs
lio/tests/: common.rs  ffi_bindings.rs  test_accept.rs  test_bind.rs  test_callback.rs  test_close.rs  test_close_timing.rs  test_connect.rs  test_detach_safe.rs  test_driver.rs  test_listen.rs  test_openat.rs  test_read.proptest-regressions  test_read.rs  test_recv.proptest-regressions  test_recv.rs  test_send.proptest-regressions  test_send.rs  test_shutdown.rs  test_socket.rs  test_tee.rs  test_timeout.rs  test_truncate.rs  test_write.rs
lio/tests/ffi/: c-src.c  cpp-src.cpp  test.sh
lio/tests/nix-build/: test.sh  test_pkgconfig.c
liten/: Cargo.toml  build.rs
liten-macros/: Cargo.toml
liten-macros/src/: lib.rs
liten-new/: Cargo.toml
liten-new/benches/: channel.rs
liten-new/src/: context.rs
liten-new/src/events/: registration.rs
liten-new/src/io/write_ext/: flush.rs  write_all.rs
liten-new/src/loom/: mod.rs
liten-new/src/net/tcp/: mod.rs
liten-new/src/net/tcp/listener/: accept.rs
liten-new/src/net/tcp/stream/: mod.rs
liten-new/src/runtime/: main_executor.rs  mod.rs  waker.rs
liten-new/src/runtime/scheduler/: mod.rs
liten-new/src/runtime/scheduler/worker/: mod.rs
liten-new/src/sync/: utils.rs
liten-new/src/sync/oneshot/: not_sync.rs
liten-new/src/task/: task.rs
liten-new/src/time/: sleep.rs
liten-new/tests/: mpsc.rs  mutex.rs  oneshot.rs  runtime.rs
liten/examples/: testing.rs
liten/src/: context.rs  coro.rs  enter.rs  future.rs  io.rs  lib.rs  macros.rs  parking.rs  reactor.rs  runtime.rs  task.rs  taskqueue.rs  utils.rs
liten/src/actor/: mod.rs
liten/src/blocking/: mod.rs  pool.rs
liten/src/compat/: mod.rs
liten/src/data/: lockfree_queue.rs  mod.rs
liten/src/events/: event_token.rs  mod.rs  registration.rs
liten/src/fs/: mod.rs
liten/src/future/: map.rs  or.rs  timeout.rs
liten/src/future/block_on/: mod.rs  waker.rs
liten/src/future/util/: mod.rs
liten/src/io/: ext.rs  mod.rs  utils.rs  write_ext.rs
liten/src/io/buf/: mod.rs
liten/src/io/driver/: macros.rs  mod.rs  op.rs  op_progress.rs
liten/src/io/driver/op/: accept.rs  bind.rs  close.rs  connect.rs  listen.rs  read.rs  recv.rs  send.rs  socket.rs  tee.rs  truncate.rs  write.rs
liten/src/io/fs/: mod.rs
liten/src/io/net/: mod.rs  socket.rs  tcp.rs  udp.rs
liten/src/io_loop/: mod.rs  registration.rs
liten/src/loom/: mod.rs  unsafe_cell.rs
liten/src/macros/: _priv.rs  _pub.rs  mod.rs
liten/src/net/: mod.rs
liten/src/net/http1/: mod.rs
liten/src/net/tcp/: mod.rs  tcpstream.rs
liten/src/net/tcp/listener/: accept.rs  mod.rs
liten/src/net/tcp/stream/: connect.rs  mod.rs
liten/src/runtime/: main_executor.rs  mod.rs  parking.rs  scheduler.rs  waker.rs
liten/src/runtime/scheduler/: _worker.rs  mod.rs  waker.rs  worker.rs
liten/src/runtime/scheduler/multi_threaded/: main_executor.rs  mod.rs
liten/src/runtime/scheduler/multi_threaded/worker/: mod.rs  shared.rs  worker.rs
liten/src/runtime/scheduler/single_threaded/: mod.rs  waker.rs
liten/src/runtime/scheduler/worker/: mod.rs  shared.rs  worker.rs  worker_parker.rs
liten/src/sync/: mod.rs  mpmc.rs  mpsc.rs  mutex.rs  oneshot.rs  pulse.rs  request.rs  semaphore.rs  utils.rs
liten/src/sync/oneshot/: imp.rs  not_sync.rs  sync.rs
liten/src/sync/pulse/: imp.rs
liten/src/task/: builder.rs  handle.rs  mod.rs  spawn.rs  store.rs  task.rs  yield_now.rs
liten/src/task/old/: mod.rs  task.rs
liten/src/task/old/task/: raw.rs  state.rs
liten/src/task/task/: raw.rs  state.rs  store.rs  waker.rs
liten/src/testing_util/: mod.rs
liten/src/time/: clock.rs  mod.rs  sleep.rs  utils.rs  wheel.rs
liten/tests/: blocking.rs  buf_reader.rs  buf_writer.rs  io_ext.rs  mpsc.rs  mutex.rs  oneshot.rs  runtime.rs  semaphore.rs  task.rs
unblocking/: Cargo.toml
