[package]
name = "lio"
version = "0.1.0"
edition = "2024"
description = "A platform-independent async I/O library with native support for io_uring (Linux), IOCP (Windows), and kqueue (macOS)"
license = "MIT"
repository = "https://github.com/liten-rs/liten"
documentation = "https://docs.rs/lio"
readme = "README.md"
keywords = ["async", "io", "networking", "filesystem"]
categories = ["asynchronous", "network-programming", "filesystem", "os"]
authors = ["Vincent Thomas <vincent@v-thomas.com>"]

[dependencies]
cfg-if = "1.0.1"
libc.workspace = true
socket2.workspace = true

[build-dependencies]
cfg_aliases = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.9"
[target.'cfg(not(target_os = "linux"))'.dependencies]
polling = "3.10.0"