[package]
name = "lio"
version = "0.1.1"
edition = "2024"
description = "A platform-independent async I/O library with native support for io_uring (Linux), IOCP (Windows), and kqueue (macOS)"
license = "MIT"
repository = "https://github.com/liten-rs/liten"
documentation = "https://docs.rs/lio"
keywords = ["async", "io", "networking", "filesystem"]
categories = ["asynchronous", "network-programming", "filesystem", "os"]
authors = ["Vincent Thomas <vincent@v-thomas.com>"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(lio_shuttle)'] }

[features]
tracing = ["dep:tracing"]

[dependencies]
cfg-if = "1.0.1"
libc.workspace = true
socket2.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt"] }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
cfg_aliases = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.9"
[target.'cfg(not(target_os = "linux"))'.dependencies]
polling = "3.10.0"

[target.'cfg(lio_shuttle)'.dependencies]
shuttle = { version = "0.8.1" }

[dev-dependencies]
shuttle = { version = "0.8.1" }
futures = "0.3.31"
tracing-subscriber = "0.3.20"
