[package]
name = "lio"
version = "0.1.2"
edition = "2024"
description = "A platform-independent async I/O library with native support for io_uring (Linux), IOCP (Windows), and kqueue (macOS)"
license = "MIT"
repository = "https://github.com/liten-rs/liten"
documentation = "https://docs.rs/lio"
keywords = ["async", "io", "networking", "filesystem"]
categories = ["asynchronous", "network-programming", "filesystem", "os"]
authors = ["Vincent Thomas <vincent@v-thomas.com>"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
tracing = ["dep:tracing"]

[dependencies]
libc.workspace = true
parking_lot = {version = "0.12"}

socket2.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
tracing = { version = "0.1.41", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.9"

[target.'cfg(not(target_os = "linux"))'.dependencies]
polling = "3.10.0"

[build-dependencies]
cfg_aliases = "0.2.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
