[package]
name = "liten"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[features]
default = []
sync = []
time = []
blocking = ["sync"]
fs = ["blocking"]
runtime = []
io = ["dep:lio", "dep:libc", "dep:socket2"]
compat = ["dep:tokio"]
full = ["sync", "time", "blocking", "fs", "runtime", "io", "compat"]

_loom_testing = ["sync", "blocking", "fs", "runtime", "io", "compat"]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["futures"] }

[dependencies]
liten-macros = { version = "0.1.0", path = "../liten-macros" }
lio = { version = "0.1.1", path = "../lio", optional = true }

thiserror = "2.0.11"

parking = "2.2.1"
pin-project-lite = "0.2.16"
crossbeam-queue = "0.3.12"
socket2 = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
tokio = { version = "1.47.1", optional = true }
async-task = "4.7.1"
