[package]
name = "liten"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
sync = []
time = []
blocking = ["sync"]
fs = ["blocking"]
runtime = []
# io = ["dep:lio", "dep:libc", "dep:socket2"]
coro = []
compat = ["dep:tokio"]
full = ["sync", "time", "blocking", "fs", "runtime", "compat"]

_loom_testing = ["sync", "blocking", "fs", "runtime", "compat"]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["futures"] }

[dependencies]
liten-macros = { version = "0.1.0", path = "../liten-macros" }
lio = { version = "0.1.1", path = "../lio", optional = true }

thiserror = "2.0.11"

pin-project-lite = "0.2.16"
crossbeam-queue = "0.3.12"
tokio = { version = "1.47.1", optional = true }
async-task = "4.7.1"
parking_lot = "0.12.5"
oneshot = { version = "0.1.11", features = ["async"] }
dashmap = "6.1.0"
