[package]
name = "liten"
version = "0.1.0"
edition = "2021"

[features]
default = []
sync = []
time = ["dep:oneshot", "dep:parking_lot"]
blocking = ["sync"]
fs = ["blocking"]
runtime = []
compat = ["dep:tokio"]
full = ["sync", "time", "blocking", "fs", "runtime", "compat"]

[dependencies]
liten-macros = { version = "0.1.0", path = "../liten-macros" }
lio = { version = "0.2.1", path = "../lio", optional = true }

thiserror = "2.0.11"

pin-project-lite = "0.2.16"
crossbeam-queue = "0.3.12"
tokio = { version = "1.47.1", optional = true }
async-task = "4.7.1"
parking_lot = { version = "0.12.5", optional = true }
oneshot = { version = "0.1.11", features = ["async"], optional = true }
dashmap = "6.1.0"
