[package]
name = "testing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
futures-util = { version = "0.3.31", features = ["io"] }
liten.path = "../../liten"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dhat = "0.3.3"
